<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Suman Alarm</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_alarm">Alarm</string>
    <string name="title_activity_challenges">Challenges</string>
    <string name="title_activity_create_challenge">Create Challenge</string>
    <string name="snooze">Snooze</string>
    <string name="logout">Log Out</string>

    <!-- action bar -->
    <string name="set_alarm">Set Alarm</string>

    <!-- User Login Activity -->
    <string name="suman_alarm_login">SUMAN ALARM \n Login</string>
    <string name="ime_login_signup">Go</string>
    <string name="title_activity_user_login_sign_up">Suman Alarm - Login</string>

    <!-- User SignUp Activity -->
    <string name="suman_alarm_signup">SUMAN ALARM \n Sign Up</string>

    <!-- Set Alarm Activity -->
    <string name="confirm_alarm">Confirm Alarm: </string>

    <!-- Challenge Activity -->
    <string name="title_activity_challenge">Challenge</string>
    <string name="create_challenge">Create Challenge</string>
    <string name="participants">Participants</string>

    <!-- Create Challenge Activity -->
    <string name="add_username">Add</string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="challenge_name">Challenge Name</string>
    <string name="add_username_button">Add User Name to List</string>
    <string name="toggle_alarm_on">Stop Alarm</string>
    <string name="toggle_alarm_off">Stopped</string>

    <string-array name="snooze_time">
        <item id="snooze_time_5_minutes">5 Minutes</item>
        <item id="snooze_time_15_minutes">15 Minutes</item>
        <item id="snooze_time_30_minutes">30 Minutes</item>
        <item id="snooze_time_1_hour">1 Hour</item>
    </string-array>

</resources>
