<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/set_alarm_button"
        android:title="@string/set_alarm"
        android:icon="@drawable/ic_action_alarms"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/challenges_button"
        android:title="@string/title_activity_challenges"
        android:icon="@drawable/ic_action_group"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/create_challenge_action_button"
        android:title="@string/create_challenge"
        android:icon="@drawable/ic_create_challenge"
        app:showAsAction="ifRoom">
    </item>
    <item
        android:id="@+id/settings_button"
        android:title="@string/title_activity_settings"
        android:icon="@drawable/ic_action_settings"
        app:showAsAction="ifRoom">
    </item>
</menu>