<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:tools="http://schemas.android.com/tools"
tools:context="com.example.alexfaber.sumanalarm.Activities.CreateChallengeActivity">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_challenge_name_text"
        android:inputType="text"
        android:hint="@string/challenge_name"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_username_text"
        android:inputType="text"
        android:hint="@string/add_username"
        android:imeOptions="actionSend"
        android:imeActionLabel="@string/add_username"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/add_username_button"
        android:text="@string/add_username_button"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/userNameListView"
        android:layout_gravity="center_horizontal" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/create_challenge_button"
        android:text="@string/create_challenge"/>

</LinearLayout>
